# llvm-mos-sdk

./: compile.py  hello-world.c  test.prg.elf
.github/workflows/: package.yml
examples/6502fun/: 3drenderer.c  CMakeLists.txt  api-examples.c  breakout.c  mnist_ml_gui.c  mnist_ml_test.c  mnist_weights_int8.h  snake.c  test.c
mos-platform/: CMakeLists.txt
mos-platform/6502fun/: 6502fun.h  CMakeLists.txt  clang.cfg  link.ld  screen.c  screen.h  utils.c  via.c  via.h
mos-platform/6502fun/crt0/: reset.S  systick.S
test/: CMakeLists.txt
